--- a/app/src/main/res/layout/memo.xml
+++ b/app/src/main/res/layout/memo.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_height="fill_parent"
     android:layout_width="fill_parent"
     android:orientation="vertical"
     android:background="@color/colorPrimaryDark">
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/memo_textView"
         android:textColor="@color/buttonTextWhite"
         android:text="@string/memo_sample"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:background="@color/colorPrimaryDark"/>
 
 
 </LinearLayout>
+</ScrollView>
