--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,17 +3,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="fill_parent"
     android:layout_width="fill_parent"
+    android:layout_weight="1"
     android:background="@color/colorPrimaryDark">
     <TableRow
         android:layout_height="fill_parent"
         android:layout_width="fill_parent"
-        android:layout_weight="2">
+        android:layout_weight="1">
         <EditText
             android:id="@+id/editText"
-            android:layout_width="fill_parent"
+            android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:maxLength="18"
+            android:paddingLeft="5dp"
+            android:maxLength="15"
             android:background="@color/colorPrimaryDark"
             android:text="@string/zero"
             android:textSize="40sp"
@@ -33,27 +35,28 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@drawable/focus_button_special_operation"
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
             android:paddingTop="0dp"
-            android:text="@string/percentage"
+            android:onClick="SQRT"
+            android:text="@string/sqrt"
             android:textColor="@color/buttonTextWhite" />
 
         <Button
             android:id="@+id/buttonSqrt"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:onClick="SQRT"
+            android:text="@string/xy"
+            android:onClick="powerOfX"
             android:layout_weight="1"
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
             android:paddingTop="0dp"
-            android:text="@string/sqrt"
             android:textStyle="bold"
-            android:background="@color/colorAccent"
+            android:background="@drawable/focus_button_special_operation"
             android:textColor="@color/buttonTextWhite"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"/>
@@ -63,26 +66,29 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/x2"
+            android:onClick="SQUARE"
             android:layout_weight="1"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
-            android:background="@color/colorAccent"
+            android:background="@drawable/focus_button_special_operation"
             android:textColor="@color/buttonTextWhite"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"/>
         <Button
             android:id="@+id/buttonInverse"
+            android:textAllCaps="false"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/_1_x"
+            android:onClick="INVERSE"
             android:layout_weight="1"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
-            android:background="@color/colorAccent"
+            android:background="@drawable/focus_button_special_operation"
             android:textColor="@color/buttonTextWhite"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"/>
@@ -103,7 +109,7 @@
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
-            android:background="@color/colorAccent"
+            android:background="@drawable/focus_button_special_operation"
             android:textColor="@color/buttonTextWhite"
             android:layout_marginRight="5dp"
             android:layout_marginLeft="5dp"
@@ -120,7 +126,7 @@
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
-            android:background="@color/colorAccent"
+            android:background="@drawable/focus_button_special_operation"
             android:textColor="@color/buttonTextWhite"
             android:layout_marginRight="5dp"
 
@@ -137,7 +143,7 @@
             android:paddingTop="0dp"
             android:text="@string/history"
             android:textStyle="bold"
-            android:background="@color/colorAccent"
+            android:background="@drawable/focus_button_special_operation"
             android:textColor="@color/buttonTextWhite"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"/>
@@ -153,7 +159,7 @@
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
-            android:background="@color/orange"
+            android:background="@drawable/focus_button_operations"
             android:textColor="@color/buttonTextWhite"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"/>
@@ -169,7 +175,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/buttonBackgroundBlack"
+            android:background="@drawable/focus_button_digits"
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
@@ -191,7 +197,7 @@
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
             android:layout_weight="1"
-            android:background="@color/buttonBackgroundBlack"
+            android:background="@drawable/focus_button_digits"
             android:textColor="@color/buttonTextWhite"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"/>
@@ -206,7 +212,7 @@
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
-            android:background="@color/buttonBackgroundBlack"
+            android:background="@drawable/focus_button_digits"
             android:textColor="@color/buttonTextWhite"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"/>
@@ -221,7 +227,7 @@
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
-            android:background="@color/orange"
+            android:background="@drawable/focus_button_operations"
             android:textColor="@color/buttonTextWhite"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"/>
@@ -241,7 +247,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:background="@color/buttonBackgroundBlack"
+            android:background="@drawable/focus_button_digits"
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
@@ -257,7 +263,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:background="@color/buttonBackgroundBlack"
+            android:background="@drawable/focus_button_digits"
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
@@ -276,7 +282,7 @@
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
-            android:background="@color/buttonBackgroundBlack"
+            android:background="@drawable/focus_button_digits"
             android:textColor="@color/buttonTextWhite"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"/>
@@ -291,14 +297,13 @@
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
-            android:background="@color/orange"
+            android:background="@drawable/focus_button_operations"
             android:textColor="@color/buttonTextWhite"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"/>
 
 
     </TableRow>
-
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -312,7 +317,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/focus_button_digits"
             android:onClick="textAppend"
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
@@ -328,7 +333,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:background="@color/buttonBackgroundBlack"
+            android:background="@drawable/focus_button_digits"
             android:onClick="textAppend"
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
@@ -344,7 +349,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:background="@color/buttonBackgroundBlack"
+            android:background="@drawable/focus_button_digits"
             android:onClick="textAppend"
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
@@ -360,7 +365,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:background="@color/orange"
+            android:background="@drawable/focus_button_operations"
             android:onClick="plus"
             android:paddingBottom="0dp"
             android:paddingLeft="0dp"
@@ -370,67 +375,49 @@
             android:textColor="@color/buttonTextWhite" />
 
     </TableRow>
-
     <TableRow
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_weight="1">
-        <Button
-            android:onClick="textAppend"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text=""
-            android:layout_weight="1"
-            android:background="@color/buttonBackgroundBlack"
-            android:textColor="@color/buttonTextWhite"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginBottom="5dp"/>
-        <Button
-            android:id="@+id/button0"
-            android:onClick="textAppend"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/zero"
-            android:paddingTop="0dp"
-            android:paddingBottom="0dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="0dp"
-            android:background="@color/buttonBackgroundBlack"
-            android:textColor="@color/buttonTextWhite"
-            android:layout_weight="1"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="5dp"/>
+        android:layout_weight="1"
+        >
+
         <Button
             android:id="@+id/buttonPoint"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:onClick="textAppend"
             android:text="@string/dot"
             android:layout_weight="1"
-            android:paddingTop="0dp"
-            android:paddingBottom="0dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="0dp"
-            android:background="@color/buttonBackgroundBlack"
+            android:background="@drawable/focus_button_digits"
             android:textColor="@color/buttonTextWhite"
             android:layout_marginRight="5dp"
-            android:layout_marginBottom="5dp"/>
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"/>
+
+        <Button
+            android:id="@+id/button0"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/focus_button_digits"
+            android:onClick="textAppend"
+            android:text="@string/zero"
+            android:textColor="@color/buttonTextWhite" />
+
         <Button
             android:id="@+id/buttonEqual"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:onClick="calculate"
             android:text="@string/equal"
-            android:paddingTop="0dp"
-            android:paddingBottom="0dp"
-            android:paddingLeft="0dp"
-            android:paddingRight="0dp"
-            android:layout_weight="1"
-            android:background="@color/orange"
+            android:layout_weight="2.05"
+            android:background="@drawable/focus_button_operations"
             android:textColor="@color/buttonTextWhite"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"/>
+
 
     </TableRow>
 
