--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:paddingLeft="5dp"
+            android:inputType="number"
             android:maxLength="15"
             android:background="@color/colorPrimaryDark"
             android:text="@string/zero"
@@ -410,7 +411,7 @@
             android:id="@+id/buttonEqual"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:onClick="calculate"
+            android:onClick="calculated"
             android:text="@string/equal"
             android:layout_weight="2.05"
             android:background="@drawable/focus_button_operations"
